--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,94 @@ html {
     display: none;
   }
   
+
+  #map{
+    margin-top: 7em;
+    height: 500px;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+
+  }
+
+  .project-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+    max-width: 1200px; /* Set a maximum width */
+    margin: 0 auto;
+    margin-top: 5em;
+    justify-items: center;    /* Centers the grid container */
+  }
+
+ /* Overall card styling */
+.project-card {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  text-decoration: none;
+  background: #0071e3;
+  color: white;
+  border-radius: 1.2em;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 200px;
+  height: 250px;
+}
+
+
+/* Upper div with background image */
+.card-upper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 92%; /* Default height */
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  transition: height 0.6s cubic-bezier(0.76, 0, 0.24, 1);
+  z-index: 2;
+  background-color: #fff;
+  border-radius: 1.2em;
+  border-width: 1px;
+  border-color: #fff;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2)
+}
+.projects-hero{
+  height: 100vh;
+  padding-top: 11em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+/* Lower card content */
+.card-lower {
+  position: relative;
+  z-index: 1;
+  padding-left: 1em;
+  padding-top: 3em;
+}
+
+/* On hover, reduce the height of the upper div to reveal more of the lower content */
+.project-card:hover .card-upper {
+  height: 22%;
+}
+
+/* Typography for the lower card */
+.card-lower h3 {
+  font-size: 1.2rem;
+}
+
+.card-lower p {
+  font-size: 0.9rem;
+  color: #fff;
+}
+
+
+
   .w-button {
     color: #fff;
     line-height: inherit;
@@ -2332,6 +2420,10 @@ html {
   
   .title.black {
     color: #000;
+  }
+
+  .margintop{
+    margin-top: 3em;
   }
   
   .heading-3 {
