--- a/styles.css
+++ b/styles.css
@@ -3614,6 +3614,126 @@ html {
   .nav-contact.black {
     background-color: #000;
   }
+
+  .grid-wrapper {
+    padding-left: 7.29em;
+    padding-right: 7.29em;
+  }
+  
+  .grid {
+    grid-column-gap: 32px;
+    grid-row-gap: 71px;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    place-items: center;
+  }
+  
+  .container-projects {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0 7.29em 5em;
+    display: flex;
+    position: relative;
+  }
+  
+  .section-projects.hero {
+    margin-top: 0;
+    padding-top: 11em;
+  }
+  
+  .div-block-5 {
+    flex-flow: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    display: flex;
+  }
+
+  .grid {
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
+  }
+  
+  .projects_card_wrapper {
+    z-index: 5;
+    width: 22.5em;
+    height: 25em;
+    position: relative;
+  }
+  
+  .projects-title {
+    color: #000;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-family: San Francisco, sans-serif;
+    font-size: 1.7em;
+    font-weight: 700;
+    line-height: 1.1;
+  }
+  
+  .projects-title.black {
+    color: #000;
+  }
+  
+  .projects-title.white {
+    color: #fff;
+  }
+  
+  .projects-card_top {
+    z-index: 1;
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    background-image: url("/images/machining.jpg");
+    background-size: cover;
+    border-radius: 33px;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-columns: 1fr;
+    width: 20.5em;
+    height: 92%;
+    margin-top: -1px;
+    padding: 2.3em 2.5em 5em 2.3em;
+    display: block;
+    position: absolute;
+    box-shadow: 11px 11px 30px -8px #00000040;
+  }
+  
+  .projects-card_top.overlay {
+    z-index: 2;
+    background-color: #0071e333;
+    background-image: none;
+  }
+  
+  .projects-card_top.project2 {
+    background-image: url("/images/carpentry.jpg");
+    background-position: 50%;
+  }
+  
+  .projects-card_top.project3 {
+    background-image: url("images/hairdresser.jpg");
+  }
+  
+  .projects-card_top.project4 {
+    background-image: url("images/realestate.jpg");
+
+  }
+  
+  .projects-card-behind {
+    background-color: #0071e3;
+    border-radius: 33px;
+    width: 20.5em;
+    padding-top: 15em;
+    padding-left: 2em;
+    padding-right: 2em;
+    position: absolute;
+    inset: 0%;
+  }
+  @media screen and (max-width: 1215px){
+    .grid {
+      grid-template-columns: 1fr 1fr;
+      place-items: center;
+    }
+  }
   
   @media screen and (min-width: 1920px) {
     .container {
@@ -3987,6 +4107,30 @@ html {
       padding-left: 2.01em;
       padding-right: 2.01em;
     }
+
+    .projects_card_wrapper {
+      width: 14em;
+      height: 15em;
+    }
+  
+    .projects-title {
+      font-size: 1.2em;
+    }
+  
+    .projects-title.white {
+      font-size: 1.3em;
+    }
+  
+    .projects-card_top {
+      width: 12em;
+      height: 93%;
+      padding-top: 1.2em;
+    }
+  
+    .projects-card_top.overlay, .projects-card-behind {
+      width: 12em;
+    }
+  
   }
   
   @media screen and (max-width: 767px) {
@@ -4230,9 +4374,47 @@ html {
     .navbar-popup-links, .nav-contact {
       display: none;
     }
+
+    .container-projects {
+      margin-left: 0;
+      margin-right: 0;
+    }
+  
+    .projects_card_wrapper {
+      width: 12em;
+      height: 15em;
+    }
+  
+    .projects-title {
+      font-size: 1em;
+    }
+  
+    .projects-title.white {
+      font-size: 1.3em;
+    }
+  
+    .projects-card_top {
+      width: 12em;
+      height: 92%;
+      padding-right: 1.8em;
+    }
+  
+    .projects-card-behind {
+      padding-top: 10em;
+      position: absolute;
+    }
+
+    .grid {
+      grid-template-columns: 1fr 1fr;
+    }
   }
   
   @media screen and (max-width: 479px) {
+
+    .project-grid {
+      margin-top: 0em;
+    }
+
     .container {
       margin-top: 0;
       margin-left: 0;
@@ -4774,6 +4956,46 @@ html {
   
     .nav-contact.black {
       display: block;
+    }
+    .container-projects {
+      margin-top: 0;
+      margin-left: 0;
+      margin-right: 0;
+      padding-top: 9.5em;
+    }
+  
+    .section-projects.hero {
+      padding-top: 0;
+    }
+  
+    .projects_card_wrapper {
+      width: 11.5em;
+      height: 14.5em;
+    }
+  
+    .projects-title {
+      font-size: 1em;
+    }
+  
+    .projects-card_top {
+      width: 11.5em;
+      padding-left: 1.2em;
+      padding-right: 1.6em;
+    }
+  
+    .projects-card_top.overlay, .projects-card-behind {
+      width: 11.5em;
+    }
+
+    .grid-wrapper {
+      padding-left: 2em;
+      padding-right: 2em;
+    }
+  
+    .grid {
+      grid-row-gap: 29px;
+      grid-template-columns: 1fr;
+      place-items: center;
     }
   }
   
